Update parent project, checkstyle/PMD rules